feat: 拦截internal接口的导出
