# src/_autoGen/api/file-storage/index.ts
@@ -3,34 +3,12 @@
 export {
   SchemaEnum,
   type ClientOptions,
-  type DeleteFilesData,
-  type DeleteFilesResponse,
-  type DeleteFilesResponses,
-  type GetDownloadUrlData,
-  type GetDownloadUrlResponse,
-  type GetDownloadUrlResponses,
-  type GetFileRecordData,
-  type GetFileRecordResponse,
-  type GetFileRecordResponses,
-  type GetStsTokenData,
-  type GetStsTokenResponse,
-  type GetStsTokenResponses,
   type HandleUploadCallbackData,
   type HandleUploadCallbackResponse,
   type HandleUploadCallbackResponses,
-  type InitUploadData,
-  type InitUploadResponse,
-  type InitUploadResponses,
   type RStorageRecordDto,
-  type RString,
-  type RStsTokenDto,
-  type RUploadInitRespDto,
-  type RVoid,
   type StorageRecordDto,
-  type StsTokenDto,
   type UploadImageProxyData,
   type UploadImageProxyResponse,
   type UploadImageProxyResponses,
-  type UploadInitReqDto,
-  type UploadInitRespDto,
 } from './types.gen';
